= 0.1.5 =
New template "smalltable"