@@ -4,7 +4,7 @@
 * --------------------------------------------------------------
 */
 .affiliate-products-db {
-  
+    
   h2 {
     margin-bottom: 0;
     font-size: 22px;
@@ -61,7 +61,7 @@
   */
   
   .infobox .infobox-top {
-    margin-top: 15px;
+    margin: 20px 0 60px 0;
     display: table;
     border-collapse: separate;
     width: 100%;
