@@ -1,11 +1,13 @@
 /**
-* --------------------------------------------------------------
-* ====================== [ =Master Defintiions ] ======================
-* --------------------------------------------------------------
+* ==============================================================
+* =Master Definitions
+* ==============================================================
 */
 
 /**
-* ----------------------- [ =Colors ] -----------------------
+* --------------------------------------------------------------
+* =Colors
+* --------------------------------------------------------------
 */
 
 $success: #3c763d;
@@ -14,11 +16,14 @@ $danger: #a94442;
 $gray-1: #323232;
 $gray-2: #ddd;
 $gray-3: #f5f5f5;
+$gray-4: #efefff;
 $amazon-1: #ffc200;
 $amazon-2: #febd69;
 
 /**
-* ----------------------- [ =Mixins ] -----------------------
+* --------------------------------------------------------------
+* =Mixins
+* --------------------------------------------------------------
 */
 
 @mixin box-shadow {
@@ -44,15 +49,18 @@ $amazon-2: #febd69;
 }
 
 /**
-* ----------------------- [ =General ] -----------------------
+* --------------------------------------------------------------
+* =General
+* --------------------------------------------------------------
 */
 
 .affiliate-products-db {
-  margin: 20px 0 20px 0;
 }
 
 /**
-* ----------------------- [ =Elements ] -----------------------
+* --------------------------------------------------------------
+* =Elements
+* --------------------------------------------------------------
 */
 
 .btn {
@@ -113,6 +121,13 @@ span.amazon-stars {
   display: none;
 }
 
+.promotion-stripe {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .label-promotion {
   color: white;
   width: 100%;
@@ -125,4 +140,14 @@ span.amazon-stars {
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: 0;
+}
+
+.table-responsive {
+  overflow-x: hidden !important;
+}
+
+@media(max-width: 900px) {
+  .table-responsive {
+    overflow-x: auto !important;
+  }
 }
