@@ -6,6 +6,8 @@
 
 .affiliate-products-db {
   .small-item {
+    margin: 20px 0 60px 0;
+  
     .panel-heading {
       display: table;
       height: 75px;
