@@ -13,24 +13,29 @@ Text Domain: apd
 */
 /* =Utilities */
 /**
+* ==============================================================
+* =Master Definitions
+* ==============================================================
+*/
+/**
 * --------------------------------------------------------------
-* ====================== [ =Master Defintiions ] ======================
+* =Colors
 * --------------------------------------------------------------
 */
 /**
-* ----------------------- [ =Colors ] -----------------------
+* --------------------------------------------------------------
+* =Mixins
+* --------------------------------------------------------------
 */
 /**
-* ----------------------- [ =Mixins ] -----------------------
+* --------------------------------------------------------------
+* =General
+* --------------------------------------------------------------
 */
 /**
-* ----------------------- [ =General ] -----------------------
-*/
-.affiliate-products-db {
-  margin: 20px 0 20px 0; }
-
-/**
-* ----------------------- [ =Elements ] -----------------------
+* --------------------------------------------------------------
+* =Elements
+* --------------------------------------------------------------
 */
 .btn > .fa {
   margin-right: 7px; }
@@ -135,6 +140,12 @@ span.amazon-stars {
 .label-promotion:empty {
   display: none; }
 
+.promotion-stripe {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 20px; }
+
 .label-promotion {
   color: white;
   width: 100%;
@@ -148,6 +159,12 @@ span.amazon-stars {
   vertical-align: baseline;
   border-radius: 0; }
 
+.table-responsive {
+  overflow-x: hidden !important; }
+
+@media (max-width: 900px) {
+  .table-responsive {
+    overflow-x: auto !important; } }
 /* =Base Rules */
 /**
 * --------------------------------------------------------------
@@ -375,7 +392,7 @@ th {
     margin-top: 10px;
     margin-bottom: 10px; }
   .affiliate-products-db .infobox .infobox-top {
-    margin-top: 15px;
+    margin: 20px 0 60px 0;
     display: table;
     border-collapse: separate;
     width: 100%; }
@@ -477,36 +494,44 @@ th {
 * ====================== [ =Small Item Template ] ======================
 * --------------------------------------------------------------
 */
-.affiliate-products-db .small-item .panel-heading {
-  display: table;
-  height: 75px; }
-  .affiliate-products-db .small-item .panel-heading h4 {
-    display: table-cell;
-    vertical-align: middle; }
-.affiliate-products-db .small-item .infobox-thumbnail {
-  min-height: 170px; }
+.affiliate-products-db .small-item {
+  margin: 20px 0 60px 0; }
+  .affiliate-products-db .small-item .panel-heading {
+    display: table;
+    height: 75px; }
+    .affiliate-products-db .small-item .panel-heading h4 {
+      display: table-cell;
+      vertical-align: middle; }
+  .affiliate-products-db .small-item .infobox-thumbnail {
+    min-height: 170px; }
 
 /**
 * --------------------------------------------------------------
 * ====================== [ =Small Table Template ] ======================
 * --------------------------------------------------------------
 */
-.affiliate-products-db table thead tr {
-  background: #323232;
-  color: white; }
-  .affiliate-products-db table thead tr a {
-    color: white; }
-.affiliate-products-db table tbody tr:nth-child(odd) {
-  background: white; }
-.affiliate-products-db table tbody tr:nth-child(even) {
-  background: #f5f5f5; }
-.affiliate-products-db table tbody tr td .infobox-thumbnail {
-  margin-top: 10px; }
-.affiliate-products-db table tbody tr td .label-promotion {
-  width: 70%;
-  margin: 0 auto; }
-.affiliate-products-db table tbody tr td .btn {
-  width: 80%;
-  margin: 0 auto; }
+.affiliate-products-db table {
+  margin: 20px 0 60px 0;
+  border: 1px solid #efefff; }
+  .affiliate-products-db table thead tr {
+    background: #323232;
+    color: white;
+    font-size: 16px; }
+    .affiliate-products-db table thead tr a {
+      color: white; }
+  .affiliate-products-db table tbody tr:nth-child(odd) {
+    background: white; }
+  .affiliate-products-db table tbody tr:nth-child(even) {
+    background: #f5f5f5; }
+  .affiliate-products-db table tbody tr td {
+    position: relative; }
+    .affiliate-products-db table tbody tr td .infobox-thumbnail {
+      margin-top: 10px; }
+    .affiliate-products-db table tbody tr td .label-promotion {
+      width: 70%;
+      margin: 0 auto; }
+    .affiliate-products-db table tbody tr td .btn {
+      width: 80%;
+      margin: 0 auto; }
 
 /*# sourceMappingURL=apdplugin.css.map */
