@@ -1,0 +1,38 @@
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+        <tr>
+            <td>Spalte 1</td>
+            <td>Spalte 2</td>
+            <td>Spalte 3</td>
+            <td>Spalte 4</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+        </tr>
+        <tr>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+        </tr>
+        <tr>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+        </tr>
+        <tr>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+            <td>adsjf gadsfadsf fg df gdfkj dgdflslfksdfsdfg</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
